--- a/WindowsFormsApp1/form/frm_reset_password.resx
+++ b/WindowsFormsApp1/form/frm_reset_password.resx
@@ -117,13 +117,66 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="categoryBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>278, 17</value>
-  </metadata>
-  <metadata name="quanLyBanCafeDataSet2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="categoryTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>529, 17</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="panel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAWySURBVHhe7d1VqARVHMfxa2N3oajgg4WBigEGggUqFvog
+        xoP14IuBiB0gioVYWGBjYCD4oqIoYmMjGC+C3d35/cFdOKz/uXPOnDO7M7P/H3zgctk5u7P/2Z065+yc
+        x+PxeDwej8fj8Xg8Ho/H4/EMPUtgY+yOo3AOLsaVuGHeVfP/Ow9HYy9shqXgycwmOAG34jX8jn8b+hNv
+        4U6ciC2wCDwLRFvxfrgFH8N6Y0v6AvfgUCwDz3x2gj4F38J64ybhZ9yLPTGTn5ylcRxeh/UGTdN7OBkr
+        YPBZEirER7DejC75ATpAWAmDy6I4Bp/AWvku+wanQhvTILItnoO1sn2ir7J90dssi2vwD6wV7Cvt/FdD
+        r7Ij3oW1QkPwOQ5E56NDxrPwN6wVGRpdGejsvkWHiQ/AeuFD9jLWR6eyIbTTs17wLPgU26AT0VHUZ7Be
+        6Cz5CftgqtkDP8J6gbPoDxyOqWRnaKuwXtgs+wtHYKLRBUH/ZFRTUSb2SdkaXox6ugezN1rNOvgQ1gtw
+        /6cLlFuhlawI3XWznthV05VtbchFozPw+2E9oav3Aoqe0Z8E64lcvCtQJNtDx9fWk7h4uup9ALKijgdv
+        w3oCl+5LrInGuQxWw6453U9plB2gExyrUZfnYCRF98B1WdlqzOXTuZzuqEZH3TCthlw55yMqy0PX961G
+        XDm/IOrGljqJWQ248i5HbR6BtbAr73nU5ilYC7vyXkVtboS1sCvvDtRG5x9D69zWVbrRFxWNm7AacOUk
+        nbGvC42ZsBpy+X7FBkjK2bAac/nORXIWxyuwGnTNvYHGN6u2hN8LKUcdH9SxMCtnwmrcpWv0VTUeXfl9
+        DNYTuHg64V4MRbIW+jgcrSvU93ltFI16d+sKpfWErpr2wbuilajPqvWkrtqxaC1q3C+rxHsTxfYb49Fd
+        xFkZqlbSfdA5XdF4MfIULYoXo4wiRfFilJVVlJQduB7nO/s4dyN5R59aDD1e/VY1HsJ6zJBpWN/p+Cr4
+        X52kojQpxiib4h1Yjx0iDQXfHIoG5hQvypFoWoxR1CPvZljLDIlmvhufUyu1KLejMrqD9RusBcdVFSPM
+        QRhihzvNc6J1q0pqUSpH7J4Ba4FxKoYmIYvJytCnJfZT12U62lSPHK1TXVKK8iTMXAdrgVBKMcJsh2dh
+        tdkHz0ADl1ISW5T3YeYUWAuMNC3GKBqn2Mce9ZojuGliivIozOiex3ewFsothqL+XlbbXRfdS70idUXZ
+        H5XRQPfvES6gLislporQlhC22xfaSFdBTjRx8wcI29VGHnVLV58UfX1per7TsB5yox564Yux6EbOg5jk
+        yaWeK+Z7/kLkZjloItCroU+dijS16EjCWtHQTVDURUazDOlN0M409lA8hu54Pg4dUWoaQl1XOgTWY0Oa
+        SmR1DCK7wVrJkOZ1rxq8okn4dTZ8GLRl3QYNxLfaCemo7nro067vaU3kb/WHUicO9ZWy2ghdgkHkaVgr
+        GLoWKdEvHljthPSY2GhCS6uNkK5ZZQ1p7kI0l7q1ciEdNKgvcUpKF0SH5C/BaidUbDaGaUUjhKwVC+n3
+        P1JTuiCKpuez2glp4yk+kcyk0uYKtlEQJWYD0tSwvcyLsFYodCmapK2CxHzF6gAkeSjBtKM50q2VCelQ
+        cg00SVsFUXSobbUX0jlarxIzt9ZFaJo2CxJzmP41evXDL3XjSnR5ZlU0TZsFUZ6A1WaoVz+T9BCslRi5
+        ADlpuyB1l3o0bV+vstA+RL3oc3+1pu2CKA/DalfUqaF30T5i/E6hrpzugtxMoiD6SrUu0eg+ePGuoZOK
+        Pvo6btcwaw0i1ZXkEplEQRS98ZrbShO5aQMrsTENMhvBKkJIj/FMKLq3sNBgVJ28JU0Q5snPXbCKIVFz
+        iHjKRjtdzaYzXgz9L/eWq6dh9Iuhx0PdMkV/638ej8fj8Xg8Ho/H44nK3Nx/8gNS66HJWtAAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="panel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABbJJREFUeF7t3VWoBFUcx/FrY3ehqOCDhYGKAQaCBSoW+iDGg/Xgi4GIHSCKhVhY
+        YGNgIPiioihiYyMYL4Ld3fn9wV04rP+5c86cM7szs/8ffOBy2Tm7s//ZnTrn7JzH4/F4PB6Px+PxeDwe
+        j8fj8Qw9S2Bj7I6jcA4uxpW4Yd5V8/87D0djL2yGpeDJzCY4AbfiNfyOfxv6E2/hTpyILbAIPAtEW/F+
+        uAUfw3pjS/oC9+BQLAPPfHaCPgXfwnrjJuFn3Is9MZOfnKVxHF6H9QZN03s4GStg8FkSKsRHsN6MLvkB
+        OkBYCYPLojgGn8Ba+S77BqdCG9Mgsi2eg7WyfaKvsn3R2yyLa/APrBXsK+38V0OvsiPehbVCQ/A5DkTn
+        o0PGs/A3rBUZGl0Z6Oy+RYeJD8B64UP2MtZHp7IhtNOzXvAs+BTboBPRUdRnsF7oLPkJ+2Cq2QM/wnqB
+        s+gPHI6pZGdoq7Be2Cz7C0dgotEFQf9kVFNRJvZJ2RpejHq6B7M3Ws06+BDWC3D/pwuUW6GVrAjddbOe
+        2FXTlW1tyEWjM/D7YT2hq/cCip7RnwTriVy8K1Ak20PH19aTuHi66n0AsqKOB2/DegKX7kusica5DFbD
+        rjndT2mUHaATHKtRl+dgJEX3wHVZ2WrM5dO5nO6oRkfdMK2GXDnnIyrLQ9f3rUZcOb8g6saWOolZDbjy
+        LkdtHoG1sCvvedTmKVgLu/JeRW1uhLWwK+8O1EbnH0Pr3NZVutEXFY2bsBpw5SSdsa8LjZmwGnL5fsUG
+        SMrZsBpz+c5FchbHK7AadM29gcY3q7aE3wspRx0f1LEwK2fCatyla/RVNR5d+X0M1hO4eDrhXgxFshb6
+        OBytK9T3eW0UjXp36wql9YSumvbBu6KVqM+q9aSu2rFoLWrcL6vEexPF9hvj0V3EWRmqVtJ90Dld0Xgx
+        8hQtihejjCJF8WKUlVWUlB24Huc7+zh3I3lHn1oMPV79VjUewnrMkGlY3+n4KvhfnaSiNCnGKJviHViP
+        HSINBd8cigbmFC/KkWhajFHUI+9mWMsMiWa+G59TK7Uot6MyuoP1G6wFx1UVI8xBGGKHO81zonWrSmpR
+        KkfsngFrgXEqhiYhi8nK0Kcl9lPXZTraVI8crVNdUoryJMxcB2uBUEoxwmyHZ2G12QfPQAOXUhJblPdh
+        5hRYC4w0LcYoGqfYxx71miO4aWKK8ijM6J7Hd7AWyi2Gov5eVttdF91LvSJ1RdkfldFA9+8RLqAuKyWm
+        itCWELbbF9pIV0FONHHzBwjb1UYedUtXnxR9fWl6vtOwHnKjHnrhi7HoRs6DmOTJpZ4r5nv+QuRmOWgi
+        0KuhT52KNLXoSMJa0dBNUNRFRrMM6U3QzjT2UDyG7ng+Dh1RahpCXVc6BNZjQ5pKZHUMIrvBWsmQ5nWv
+        GryiSfh1NnwYtGXdBg3Et9oJ6ajueujTru9pTeRv9YdSJw71lbLaCF2CQeRpWCsYuhYp0S8eWO2E9JjY
+        aEJLq42QrlllDWnuQjSXurVyIR00qC9xSkoXRIfkL8FqJ1RsNoZpRSOErBUL6fc/UlO6IIqm57PaCWnj
+        KT6RzKTS5gq2URAlZgPS1LC9zIuwVih0KZqkrYLEfMXqACR5KMG0oznSrZUJ6VByDTRJWwVRdKhttRfS
+        OVqvEjO31kVomjYLEnOY/jV69cMvdeNKdHlmVTRNmwVRnoDVZqhXP5P0EKyVGLkAOWm7IHWXejRtX6+y
+        0D5Evehzf7Wm7YIoD8NqV9SpoXfRPmL8TqGunO6C3EyiIPpKtS7R6D548a6hk4o++jpu1zBrDSLVleQS
+        mURBFL3xmttKE7lpAyuxMQ0yG8EqQkiP8Uwourew0GBUnbwlTRDmyc9dsIohUXOIeMpGO13NpjNeDP0v
+        95arp2H0i6HHQ90yRX/rfx6Px+PxeDwej8fjicrc3H/yA1Lrocla0AAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
